Update cmd minimize function

--- a/src/cmd/cmd.html
+++ b/src/cmd/cmd.html
@@ -39,7 +39,8 @@
             <div class="title" id="cmd-header">
               <img src="../img/cmdlg.png" class="m" width="25" height="20" />
               <span class="CmdTitle">Hacker123 PowerShell</span>
-              <button class="bt"></button>
+              <button class="bt" onclick="document.querySelector('.cmd').style.display = 'none'"></button>
+
             </div>
             <p>
               Hacker123 PowerShell [Version 0.1.2] Open Source Project. (c) 2024
